@@ -2439,3 +2439,4 @@ ruthless programmer, and sentenced to a quick death.
 40.Player passwords can now be optionally hashed into the DB -- see HASHPASSWORDS in coffeemud.ini
 41.If you've been having MXP problems with ZMUD/CMUD or Siplet, those problems are over.
 42.New private Government type (Profession) for class clans.  Make sure you add CLASSCLAN to the new MAXCLANCATS ini entry.
+43.PlayerClass (the class used when you disable CLASSES) now uses a programmatically defined skill tree.
